# wood-cutting

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  Catalog.cpp  Catalog.h  Geometry.cpp  Geometry.h  Platform.cpp  Platform.h  main.cpp
app/ECS/: ECS.h
app/ECS/Systems/: InputSystem.cpp  InputSystem.h  Systems.cpp  Systems.h
app/FontRendering/: BMFont.cpp  BMFont.h
app/Imgui/: Imgui.cpp  Imgui.h
app/Renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shaders.h  Textures.cpp  Textures.h  Window.h
assets/fonts/ComicSans80/: ComicSans80.fnt
assets/shaders/unlit-color/: vertex.glsl
assets/shaders/unlit-texture/: fragment.glsl  vertex.glsl
assets/textures/Cute_Fantasy_Free/Player/: Player.aseprite  Player.json
assets/textures/Cute_Fantasy_Free/Tiles/: Grass_Middle.aseprite  Grass_Middle.json  Path_Tile.aseprite  Path_Tile.json  Path_Tile2.json
